feat: consistent page sizes
this keeps all of the buttons below the log view textbox in the same place across pages